[package]
name = "blockchain-in-rust"
version = "0.1.0"
authors = ["Jacob <jacob@geeklaunch.net>"]
edition = "2018"

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
hex = "0.3.2"
crypto-hash = "0.3.3"
ecdsa = "0.16.1"
rand = "0.8.4"
p256 = "0.13.2"
rand_core = "0.6.4"
elliptic-curve = "0.13.5"
sha2 = "0.10.7"
